Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-1180

Dragging an icon from a QListView operating in IconMode doesn't paint the icon outside of the view

    XMLWordPrintable

Details

    • Qt 4: 7126cdf48f5e28f1c2238c35960350921f849881 Qt 5: 72544a5142b19454f9636c567ba199161c02e79b b329c8ffb960da492d90c7bf70ed93f23fa2d400

    Description

      When dragging an icon from a QListView operating in IconMode, the icon is not painted when the mouse is moved outside the view.
      This happens because the view paints the icon directly on the viewport instead of setting the icon as the drag pixmap.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sgaist Samuel Gaist
            admin Administrator
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes